# yew-admin-boilerplate

./: .gitignore  404.html  Cargo.toml  README.md  index.html  script.js  style.css
.github/workflows/: ghpages-release.yaml
src/: main.rs  router.rs
src/layouts/: content_wrapper.rs  header.rs  mod.rs  navbar.rs  section.rs
src/pages/: mod.rs
src/pages/home/: mod.rs
src/store/: filter.rs  mod.rs
src/util/: util.rs
